--- a/AF.AuditTrail.Sample/Web.config
+++ b/AF.AuditTrail.Sample/Web.config
@@ -45,12 +45,12 @@
   </AFServerSection>
   <AFDatabaseSection>
     <Elements>
-      <add Name="AF" InitialCatalog="Sample2" UserID="sa" Password="My9830330637" />
+      <add Name="AF" InitialCatalog="Sample2" UserID="sa" Password="###"/>
     </Elements>
   </AFDatabaseSection>
   <AFAuditSection>
     <Elements>
-      <add ConnectionStringName="AF"/>
+      <add ConnectionStringName="AF" SchemaName="dbo"/>
     </Elements>
   </AFAuditSection>
  
