--- a/AF.AuditTrail.Sample/Web.config
+++ b/AF.AuditTrail.Sample/Web.config
@@ -45,7 +45,7 @@
   </AFServerSection>
   <AFDatabaseSection>
     <Elements>
-      <add Name="AF" InitialCatalog="Sample2" UserID="sa" Password="###"/>
+      <add Name="AF" InitialCatalog="Database name" UserID="user ID" Password="password"/>
     </Elements>
   </AFDatabaseSection>
   <AFAuditSection>
